feat: auth and user management